# inc_security_crypto

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  conf.py  index.rst  ubproject.toml  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: copyright.yml  docs-cleanup.yml  license_check.yml  test_linux.yml  test_qnx.yml
docs/: index.rst
docs/crypto/architecture/: dynamic_architecture.rst  index.rst
docs/features/feature_example/: index.rst
docs/features/feature_example/architecture/: chklst_arc_inspection.rst  index.rst
docs/features/feature_example/safety_analysis/: aou_requirements.rst
docs/features/feature_example/security_planning/: index.rst
docs/manuals/: index.rst  user_manual.rst
docs/safety_mgt/: index.rst  module_safety_plan.rst
docs/security_mgt/: module_security_plan.rst  module_security_plan_fdr.rst
main/: genindex.html  index.html  metrics.json  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
main/_sources/: index.rst.txt
main/_sources/crypto/architecture/: api_architecture.rst.txt  api_description.rst.txt  design_decisions.rst.txt  dynamic_architecture.rst.txt  index.rst.txt  interfaces.rst.txt  key_management_details.rst.txt  provider_architecture.rst.txt
main/crypto/architecture/: api_architecture.html  api_description.html  design_decisions.html  dynamic_architecture.html  index.html  interfaces.html  key_management_details.html  provider_architecture.html
main/docs/: index.html
main/docs/crypto/architecture/: api_architecture.html  api_description.html  design_decisions.html  dynamic_architecture.html  index.html  interfaces.html  key_management_details.html  provider_architecture.html
main/docs/features/: index.html
main/docs/features/feature_example/: index.html
main/docs/features/feature_example/architecture/: chklst_arc_inspection.html  index.html
main/docs/features/feature_example/safety_analysis/: aou_requirements.html  dfa.html  fmea.html
main/docs/features/feature_example/safety_planning/: index.html
main/docs/features/feature_example/security_planning/: index.html
main/docs/manuals/: index.html  safety_manual.html  security_manual.html  user_manual.html
main/docs/release/: release_note.html
main/docs/safety_mgt/: index.html  module_safety_analysis_fdr.html  module_safety_package_fdr.html  module_safety_plan.html  module_safety_plan_fdr.html
main/docs/security_mgt/: index.html  module_security_package_fdr.html  module_security_plan.html  module_security_plan_fdr.html
main/docs/verification_report/: module_verification_report.html
main/examples/docs/: architecture_modeling_example.html
main/score/component_example/docs/: component_classification.html  index.html
main/score/component_example/docs/architecture/: chklst_arc_inspection.html  component_architecture.html  index.html
main/score/component_example/docs/detailed_design/: chklst_impl_inspection.html  detailed_design_example.html  index.html
main/score/component_example/docs/requirements/: chklst_req_inspection.html  index.html  requirements.html
main/score/component_example/docs/safety_analysis/: aou_requirements.html  dfa.html  fmea.html
main/score/crypto/daemon/data_manager/docs/: index.html
main/score/iav_primula/docs/: component_classification.html  index.html
main/score/iav_primula/docs/architecture/: chklst_arc_inspection.html  component_architecture.html  index.html
main/score/iav_primula/docs/detailed_design/: chklst_impl_inspection.html  detailed_design_example.html  index.html
main/score/iav_primula/docs/requirements/: chklst_req_inspection.html  index.html  requirements.html
main/score/iav_primula/docs/safety_analysis/: aou_requirements_template.html  dfa.html  fmea.html
score/component_example/docs/: index.rst
score/component_example/docs/architecture/: chklst_arc_inspection.rst  component_architecture.rst  index.rst
score/component_example/docs/detailed_design/: chklst_impl_inspection.rst  dd_example_ex_dyn.puml  dd_example_ex_sta.puml  detailed_design_example.rst  index.rst
score/component_example/docs/requirements/: chklst_req_inspection.rst  index.rst  requirements.rst
score/component_example/docs/safety_analysis/: aou_requirements.rst
score/crypto/daemon/data_manager/docs/: index.rst
score/crypto/daemon/key_management/core/: key_management_service.hpp
score/iav_primula/: BUILD
score/iav_primula/docs/: component_classification.rst  index.rst
score/iav_primula/docs/architecture/: chklst_arc_inspection.rst  component_architecture.rst  index.rst
score/iav_primula/docs/detailed_design/: chklst_impl_inspection.rst  detailed_design_example.rst  index.rst
score/iav_primula/docs/requirements/: chklst_req_inspection.rst  requirements.rst
score/iav_primula/docs/safety_analysis/: aou_requirements_template.rst  dfa.rst  fmea.rst
score/iav_primula/src/: main.rs
score/iav_primula/tests/: BUILD  hello_test.rs
tests/grpc_control_plane/: BUILD
tests/iav_primula/: BUILD
tests/key_management/: test_key_management_context.cpp
tests/openssl/block_cipher/ECB-AES128/: BUILD
